fix(docs): css fix for text align (#863)
* fix(docs): text-align fix for version banner

--- a/docs/src/styles/custom.scss
+++ b/docs/src/styles/custom.scss
@@ -118,6 +118,7 @@ body {
 }
 
 .theme-doc-version-banner {
+    width: 100%;
     max-width: var(--doc-item-container-width);
 }
 
